--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical"
+        android:layout_centerInParent= "true"
+        android:layout_margin="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width= "match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_latitude"
+            android:text="Latitude Displays Here"
+            android:textColor="@color/black"
+            android:padding="10dp"
+            android:textSize="20sp">
+
+        </TextView>
+
+        <TextView
+            android:layout_width= "match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_longitude"
+            android:text="Longitude Displays Here"
+            android:textColor="@color/black"
+            android:padding="10dp"
+            android:textSize="20sp">
+
+        </TextView>
+
+    </LinearLayout>
+
+</RelativeLayout>
