--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,37 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
+    android:gravity="center_horizontal"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent= "true"
-        android:layout_margin="10dp">
+        android:layout_centerInParent="true"
+        android:layout_margin="10dp"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_width= "match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_latitude"
-            android:text="Latitude Displays Here"
-            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:padding="10dp"
+            android:text="Latitude Displays Here"
+            android:textColor="@color/white"
             android:textSize="20sp">
 
         </TextView>
 
         <TextView
-            android:layout_width= "match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/tv_longitude"
-            android:text="Longitude Displays Here"
-            android:textColor="@color/black"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:padding="10dp"
+            android:text="Longitude Displays Here"
+            android:textColor="@color/white"
             android:textSize="20sp">
 
         </TextView>
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/location_icon"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginTop="125dp"
+        android:gravity="center|center_vertical"
+        app:srcCompat="@drawable/location_img" />
 
 </RelativeLayout>
